<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_gamma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/_0"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <Button
            android:id="@+id/button_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:layout_margin="@dimen/activity_horizontal_margin" />

    </LinearLayout>

</LinearLayout>
